deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: feeds
  namespace: pz
  labels:
    app: feeds

spec:
  replicas: 1
  selector:
    matchLabels:
      app: feeds
  template:
    metadata:
      labels:
        app: feeds
    spec:
      containers:
        - name: feeds
          image: sjc.ocir.io/axlfudrjenut/pz/feeds:latest 
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
          ports:
            - name: http
              containerPort: 5000
