deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feeds
  namespace: pz

spec:
  ports:
    - name: http
      port: 80
      targetPort: http

  selector:
    app: feeds
